Fix crash when showing current folder properties from context menu

BUG: 129890

svn path=/trunk/extragear/graphics/gwenview/; revision=593752